--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 @import "./buttons.css";
 /* @import "./nav.css";
 @import "./footer.css";
-
-@import "./geo.css"; */
+ */
+@import "./geo.css";
 @import "./text.css";
 @import "./input.css";
 @import "./homepage.css"
