--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,3 @@
-::root {
-  --yellow: "red";
-}
 
 html {
   box-sizing: border-box;
@@ -8,6 +5,7 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
 
 body {
   color: #111;
@@ -28,16 +26,9 @@ ul {
 li {
   list-style: none;
   line-height: 1.6;
-  border-bottom: 1px solid #333;
-  padding: 10px;
+  border-bottom: 2px solid #333;
+  padding: 10px 0;
   font-weight: bold;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid #E7F1F7;
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
 .pull-right {
