--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@ body {
   color: #111;
   font-family: -apple-system, BlinkMacSystemFont, helvetica, roboto, segoe ui, arial, sans-serif;
   margin: 0;
-  font-size: 1.2rem;;
+  font-size: 1.2rem;
 }
 
 p {
