--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,7 +9,7 @@
 
 .homepage-dark {
   background-color: #1C1C1C;
-  color: #eee;
+  color: #bbb;
 }
 
 .homepage-icon {
@@ -41,4 +41,9 @@
   .homepage-geo-chart {
     display: block;
   }
+}
+
+.homepage-footer {
+  border-top: 2px solid #333;
+  color: #888;
 }
