--- a/css/input.css
+++ b/css/input.css
@@ -1,9 +1,18 @@
 .input {
   border-radius: 8px;
-  padding: 15px;
+  padding: 11px;
 }
 
 .input-gray {
   background-color: #eee;
-  border: none;
+  border: 2px solid #eee;
+}
+
+.input-gray:hover {
+  border-color: #e0e0e0;
+}
+
+.input-gray:focus {
+  outline: none;
+  border-color: #0066ff;
 }
