--- a/css/buttons.css
+++ b/css/buttons.css
@@ -27,9 +27,16 @@
   right: 0;
   bottom: 0;
   top: 0;
-  background-color:#061d9e;
   transition: 0.2s all ease-out;
   opacity: 0;
+}
+
+.btn-primary::after {
+  background-color:#061d9e;
+}
+
+.btn-primary-ondark::after {
+  background-color:#aab7ff;
 }
 
 .btn-md {
